# Genesis

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
app/: CMakeLists.txt  main.cpp
cmake/: CompileShaders.cmake
engine/: CMakeLists.txt
engine/core/: Logger.cpp  Logger.h  Types.h
engine/include/Genesis/: Genesis.h
engine/platform/: Window.cpp  Window.h
engine/renderer/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  SceneObject.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  Vertex.h  ViewportFramebuffer.cpp  ViewportFramebuffer.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSyncObjects.cpp  VulkanSyncObjects.h  VulkanTexture.cpp  VulkanTexture.h
engine/ui/: ImGuiOverlay.cpp  ImGuiOverlay.h
shaders/: phong.frag  phong.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  triangle.vert
